@@ -1,6 +1,7 @@
 Version 2022.8.3 (2022-08-03)
 - Remove CHANNEL_OPERATION_MODE from cover ce
 - Refactor get_value/set_value
+- Remove domain from model
 
 Version 2022.8.2 (2022-08-02)
 - Remove obsolete methods
